src/styles/common.less
@import '_colors.less';
@import '_mixins.less';

/* Layout */

html { font-size: 62.5%; }

body {
  background-color: @primary-background-color;
  padding: 0;
  &.product-catalog {
    background-color: @primary-background-color;
    padding: 50px 0 0 0;
  }
  &.product-info {
    .container {
      background-color: @secondary-background-color;
      padding: 40px;
    }
  }
}

html, body {
  height: 100%;
}

body.product-catalog {
  padding-left: 0;;
  padding-top: 0;
}

.container {
  max-width: 100%;
}

/* Navigation */

.navmenu {
  position: absolute;
  width: 240px;
}

.navmenu-fixed-left {
  top: 90px;
}

.nav li > a:focus {
  background-color: @primary-background-color;
}

.navmenu.canvas-slid {
  background-color: @darkest-color;
}

.navbar-inverse {
  .navbar-nav {
    padding: 20px 10px 0 10px;
    margin-left: 20px;
    li {
      min-width: 110px;
      a {
        .site-nav-menu-link;
      }
    }
  }
}

.nav.main-menu {
  padding-left: 40px;
  margin-top: 20px;
  //background-color: @darkest-color;
  li {
    a {
      .site-nav-menu-link;
      &:hover, &:active, &:visited {
        background-color: @darkest-color;
        color: @secondary-background-color;
      }
      &:hover {
        color: @hover-color;
      }
    }
  }
}

.navmenu  {
  background-color: @primary-background-color;
  h5 {
    margin: 40px 0 0 20px;
    color: @secondary-background-color;
  }
}

.navmenu-brand {
  margin: 0 0 0 15px;
}

.nav.navmenu-nav {
  margin-top: 40px;
}

.navmenu {
  border: none;
  padding-top: 50px;
}

.navbar {
  display: block;
  text-align: center;
}

.navbar-toggle {
  position: absolute;
  float: left;
  margin: 14px 0 0 23px;
}

.nav > li {
  display: inline-block;
}

/* Header */

header {
  min-height: 90px;
  background-color: @darkest-color;
}



.icon-logo {
  display: block;
  width: 90px;
  height: 90px;
  background-color: @brand-background-color;
  padding: 5px;
  img {
    margin-top: 20px;
  }
}

/* Filters */

.product-filters li {
  &:first-child {
    margin-top: 8px;
  }
}

.product-filters {
  list-style-type: none;
  padding-left: 20px;
  li {
    padding-bottom: 10px;
    label {
      color: @secondary-background-color;
      text-transform: uppercase;
      font-size: 1.1rem;
    }
    input {
      margin-right: 5px;
    }

  }
}

.product-categories {
  .navmenu-brand {
    margin-left: 8px;
    &:hover, &:active, &:visited {
      color: @secondary-background-color;
      background-color: @logo-background-color;
    }
    &:hover {
      color: @hover-color;
    }
  }
}


/* Product catalog */

.product-list {
  list-style-type: none;
  padding-bottom: 100px;
  background-color: @secondary-background-color;
  min-height: 560px;

  .product-list-item {
    text-align: center;
    height: 300px;
    padding: 100px;
    img {
      max-height: 100px;
      margin-bottom: 30px;
    }
    h4 {
      color: @primary-background-color;
      font-family: 'Open Sans', sans-serif;;
      font-size: 1.4rem;
      font-weight: 700;
      text-transform: uppercase;
    }

    .product-image {
      height: 150px;
      text-align: center;
    }

    &__info {
      display: block;
    }
  }
}

.filter-results__count {
  padding-top: 20px;
  padding-left: 80px;
  text-transform: uppercase;
  font-style: italic;
  color: @alternate-text-color;
}

.no-results__text {
  padding-top: 100px;
  text-transform: uppercase;
}

/* Product Info */

.product-name {
  font-family: 'Open Sans', sans-serif;
  font-size: 3.8rem;
  font-weight: 800;
  font-style: normal;
  text-transform: uppercase;
}

.prod-sku {
  color: @light-gray-color;
  font-family: 'Open Sans', sans-serif;
  font-weight: normal;
  font-size: 1.2rem;
}

/* Footer */

footer {
  text-align: center;
  text-transform: uppercase;
  color: @secondary-background-color;
  font-size: 1.3rem;
  section {
    padding: 60px;
  }
  .social-network__links {
    list-style-type: none;
    padding-top: 40px;
    li {
      display: inline-block;
      padding: 20px;
        a {
          color: @secondary-background-color;
        }
    }
  }
  hr {
    border-top: 1px solid #666;
    width: 85%;
  }

  .search-container {
    margin: 0 0 40px -27px;

    button {
      width: 65px;
    }
  }

  .newsletter__input {
    width: 33%;
  }
}

/* Search */

.search-input {
    padding-left: 15px;
    color: @search-text-color;
    border: none;
    text-overflow: ellipsis;
    text-transform: none;
    font-style: italic;
    font-weight: 700;
    background-color: @secondary-background-color;
    height: 3.2rem;
    font-family: 'Open Sans', sans-serif;
    font-size: 1.2rem;
    width: 230px;
}

.search-container {
  position: relative;
  margin-top: 22px;
}

.search-container button {
  position: absolute;
  width: 33px;
  border: none;
  height: 3.2rem;
  line-height: 3.2rem;
  font-weight: 700;
  font-size: 1.2rem;
  color: @secondary-background-color;
  background-color: @logo-background-color;
}


/* Media queries */

@media screen and (max-width: 600px) {
  .nav.main-menu {
    margin-top: 8px;
  }
}

@media screen and (max-width: 992px) {

  body {
    padding: 0;
  }
  .navbar {
    border-color: transparent;
    background-color: transparent;
  }

  .navmenu {
    background-color: @darkest-color;
  }

  .navbar-inverse {
    .navbar-nav {
      margin-left: 0;
    }
  }
}

@media (min-width: 1px) {
  .navbar-toggle {
    display: block !important;
  }
}

@media (min-width: 992px) {
  .navmenu {
    padding-top: 0;
  }
  .navbar {
    display: none !important; /* IE8 fix */
  }
}

@media (min-width: 768px) {
  .container {
    width: 100%;
  }
}

